--- a/css/styles.css
+++ b/css/styles.css
@@ -38,7 +38,7 @@ legend { /* Titles */
     border-radius: 10px;
     border: solid 1px #172934;
     padding: 2px 7px;
-    font-family: "Helvetica", "Arial";
+    font-family: "Times New Roman", "Helvetica", "Arial";
     color: #172934;
 }
 
@@ -128,7 +128,13 @@ input#searchButton { /* Search Button */
     padding: 2px 7px;
     font-family: "Helvetica", "Arial";
     font-size: 100%;
-    background-image: -webkit-gradient(linear, left top, left bottom, from(#f2fdff), to(#97edfc));
+    color: #ffffff;
+    text-shadow: 0 -1px 0 #172934;
+    background: -webkit-gradient(linear, left top, left bottom, from(#05c331), to(#026f1b));
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    
 }
 
 li>img { /* icons images in stored data */
@@ -155,6 +161,7 @@ div>ul>li { /* stored data */
     margin-bottom: 5px;
     padding-top: 5px;
     padding-left: -5px;
+    font-family: "Helvetica", "Arial";
 }
 
 output#chosen { /* Slider Output */
