Enlarged hand in Logo. Tweaked css accordingly.

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,9 +10,11 @@ html {
 }
 
 h1 {
-    text-align: center;
-    padding: 12px;
-    margin: -12px -12px 0px -12px;
+	text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: -12px;
+    margin-bottom: 4px;
 }
 
 body {
