Added JQM and nav to index and additem with various tweaks (css, js) accordingly. Display stored data not displaying correctly yet

--- a/Project2/Bronze/css/styles.css
+++ b/Project2/Bronze/css/styles.css
@@ -10,11 +10,41 @@ html {
     background-color: #7ED0E0;
 }
 
+.ui-page { /* Override JQM background and replace with my background color*/
+	background-image: none;
+    background-color: #7ED0E0 !important;
+}
+
+.ui-mobile fieldset {
+	background-color: #ccf5fd;
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    border: solid 1px #172934;
+    margin-left: 15px;
+    margin-right: 15px;
+    margin-bottom: 5px;
+}
+
+
+/*input#span {
+	display: none;
+}*/
+
+div#home {
+    background-color: #7ED0E0;
+}
+
+.ui-body-c, .ui-overlay-c {
+	background-image: none;
+    background-color: #7ED0E0 !important;
+}
+
+
 h1 {
 	text-align: center;
     margin-left: auto;
     margin-right: auto;
-    margin-top: -12px;
+    margin-top: -1px;
     margin-bottom: 4px;
 }
 
@@ -24,11 +54,11 @@ body {
     color: #172934;
     max-width: 560px;
     border: 8px white;
-    line-height: 24px;
+    
     position: inherit;
 }
 
-a>img { /* To Center my Feature on index*/
+a>img { /* To Center my Feature on index */
 	display: block;
 	margin-left: auto;
     margin-right: auto;
@@ -43,17 +73,19 @@ legend { /* Titles */
     padding: 2px 7px;
     font-family: "Times New Roman", "Helvetica", "Arial";
     color: #172934;
+    text-align: center;
 }
 
-span { /* Required elements notice */
+span#notice { /* Required elements notice */
 	font-family: "Helvetica", "Arial";
 	color: #172934;
     font-size: 75%;	
+    margin-left: 10px;
 }
 
 fieldset { /* Light colored box around various elements */
     background-color: #ccf5fd;
-    font-size: 125%;
+    
     -webkit-border-radius: 10px;
     border-radius: 10px;
     border: solid 1px #172934;
@@ -72,7 +104,7 @@ input#importance { /* Slider */
     height: 8px;
     width: 155px;
     margin-top: 18px;
-    margin-bottom: 15px;
+    margin-bottom: 18px;
 }
  
 input#importance::-webkit-slider-thumb { /* Slider */
@@ -89,11 +121,16 @@ input#importance::-webkit-slider-thumb { /* Slider */
 
 textarea { /* Event Details text box */
     width: 90%;
-    height: 80px;
+    height: 60px;
     border: 1px solid #172934;
     padding: 5px;
     font-family: "Helvetica", "Arial";
     font-size: 100%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 3px;
+    margin-bottom: 10px;
 }
 
 input#submit { /* Save Date button on additem */
@@ -156,7 +193,6 @@ h1>img { /* Logo on additem */
 	-webkit-border-radius: none;
     padding: 4px;
 }
-
 
 div>ul>li { /* stored data */
     background-color: #ccf5fd;
