--- a/Project3/Gold/css/indexStyles.css
+++ b/Project3/Gold/css/indexStyles.css
@@ -49,7 +49,111 @@ div>ul { /* stored data */
     font-family: "Helvetica", "Arial";
 }
 
-div>h3 {
+div>h3 { /* Browse by Event Type icons */
 	margin-top: auto;
 	margin-bottom: auto;
 }
+
+fieldset#inputTop { /* Light colored box around top part of Input form */
+    background-color: #ccf5fd;
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    border: solid 1px #172934;
+    margin-left: 15px;
+    margin-right: 15px;
+    margin-bottom: 5px;
+    padding-left: 20px;
+}
+
+fieldset#inputBottom { /* Light colored box around bottom part of Input form */
+    background-color: #ccf5fd;
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    border: solid 1px #172934;
+    margin-left: 15px;
+    margin-right: 15px;
+    margin-bottom: 5px;
+    padding-left: 20px;
+}
+
+textarea { /* Event Details text box */
+    width: 90%;
+    height: 60px;
+    border: 1px solid #172934;
+    padding: 5px;
+    font-family: "Helvetica", "Arial";
+    font-size: 100%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 3px;
+    margin-bottom: 10px;
+}
+
+input#submit { /* Save Date button on additem */
+    font-family: "Helvetica", "Arial", sans-serif;
+    display: inline-table;
+    text-align: center;
+    background: -webkit-gradient(linear, left top, left bottom, from(#05c331), to(#026f1b));
+    background-color: #026f1b;
+    color: #ffffff;
+    font-size: 200%;
+    padding: 10px 10%;
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    border: solid 1px #172934;
+    text-shadow: 0 -1px 0 #172934;
+    margin-bottom: 10px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+nav>a { /* All <a> tags within nav. Display Data, Clear Local Data, etc */
+    background-color: #f2fdff;
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    border: solid 1px #172934;
+    padding: 2px 7px;
+    font-family: "Helvetica", "Arial";
+    font-size: 120%;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#f2fdff), to(#97edfc));
+}
+
+span#notice { /* Required elements notice */
+	font-family: "Helvetica", "Arial";
+	color: #172934;
+    font-size: 85%;	
+    margin-left: 10px;
+}
+
+input#importance { /* Slider */
+    -webkit-appearance: none;
+    background-color: #172934;
+    height: 8px;
+    width: 155px;
+    margin-top: 18px;
+    margin-bottom: 18px;
+}
+ 
+input#importance::-webkit-slider-thumb { /* Slider */
+    -webkit-appearance: none;
+    position: relative;
+    width: 20px;
+    height: 30px;
+    -webkit-border-radius: 40px;
+    -moz-border-radius: 40px;
+    border-radius: 40px;
+    border: solid 1px #b1edf9;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#68d4ea), to(#23a0b9));
+}
+
+output#chosen { /* Slider Output */
+	background-color: #f2fdff;
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    border: solid 1px #172934;
+    padding: 2px 10px;
+    margin-left: 78px;
+    width: 25px; 
+    font-family: "Helvetica", "Arial";
