--- a/Project3/Gold/css/indexStyles.css
+++ b/Project3/Gold/css/indexStyles.css
@@ -37,17 +37,7 @@ legend { /* Titles */
     text-align: center;
 }
 
-div>ul { /* stored data */
-    background-color: #ccf5fd;
-    color: #172934;
-    -webkit-border-radius: 10px;
-    border-radius: 10px;
-    border: solid 1px #172934;
-    margin-bottom: 5px;
-    padding-top: 5px;
-    padding-left: -5px;
-    font-family: "Helvetica", "Arial";
-}
+
 
 fieldset#inputTop { /* Light colored box around top part of Input form */
     background-color: #ccf5fd;
@@ -69,6 +59,18 @@ fieldset#inputBottom { /* Light colored box around bottom part of Input form */
     margin-right: 15px;
     margin-bottom: 5px;
     padding-left: 20px;
+}
+
+div>ul>li { /* stored data */
+    background-color: #ccf5fd;
+    color: #172934;
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    border: solid 1px #172934;
+    margin-bottom: 5px;
+    padding-top: 5px;
+    padding-left: -5px;
+    font-family: "Helvetica", "Arial";
 }
 
 textarea { /* Event Details text box */
