--- a/Project4/Gold/css/indexStyles.css
+++ b/Project4/Gold/css/indexStyles.css
@@ -11,12 +11,36 @@ Gold App
     background-color: #7ED0E0 !important;
 }
 
-h1 {
+h1 { /* Logo on addItem and error404 */
 	text-align: center;
     margin-left: auto;
     margin-right: auto;
     margin-top: -1px;
     margin-bottom: 4px;
+}
+
+h2 { /* Error img */
+	text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: -1px;
+    margin-bottom: 1px;
+}
+
+h3#errorMsg { /* Light box around error message */
+	background-color: #ccf5fd;
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    border: solid 1px #172934;
+    margin-left: 15px;
+    margin-right: 15px;
+    margin-bottom: 15px;
+    padding-left: 20px;
+    box-shadow: -3px 3px 8px 2px rgba(0,0,0,0.3);
+}
+
+a#home { /* Centering return home button on 404 */
+	margin-left: 75px;
 }
 
 a>img { /* To Center my Feature on index */
@@ -152,7 +176,7 @@ label.error { /* Validator error messages */
 	color: #fc0303;
 }
 
-#popErrors {
+#popErrors { /* Hide error a tag used for pop up error */
 	display: none;
 }
 
